# py-logs-analyzer

./: .gitignore  EXAMPLES.md  README.md  cli.py  logz_gen.py  pyproject.toml  pytest.ini
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_filters.py  test_iter_files.py  test_log_line.py  test_parsing.py  test_stats.py
